<resources>
    <string name="app_name">Meatopia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_user">User Information</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_history">Order History</string>
    <string name="meatopia_shop">Meatopia Shop</string>
    <string name="at_your_door">at your door</string>
    <string name="the_easiest_way_to_buy_your_meat_shopping">The easiest way to buy your Meat shopping</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_phone">Not a valid phone number</string>
    <string name="invalid_password">Password less than 8 characters</string>
    <string name="invalid_data_empty">Data is empty</string>

    <string name="invalid_name">Name is empty</string>
    <string name="name">Name</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="meat_name">Meat name</string>
    <string name="save">Save</string>
    <string name="result">Result</string>
    <string name="descriptions">Descriptions</string>
    <string name="meat">Meat</string>
    <string name="buy_now">Buy now</string>
    <string name="my_cart">My Cart</string>
    <string name="_1kg_price">1Kg.Price</string>
    <string name="rp180_000">Rp180.000</string>
    <string name="checkout">Checkout</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="you_order_has_been_confirmed_will_be_delivered_soon">You order has been confirmed. Will be delivered soon</string>
    <string name="profile">Profile</string>
    <string name="sulaiman">Iman</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="muhammadsulaiman8303_gmail_com">iman@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="jl_simajuntak_raja_3_no_43_pajagalan">Jl. Simajuntak raja 3 no 43 pajagalan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="meat_quaility">Meat Quaility :</string>
    <string name="fresh_meat">cannot be ascertained</string>
    <string name="payment">Payment</string>
    <string name="amout_to_pay">Amout To Pay</string>
    <string name="frozen_meat">Frozen Meat</string>
    <string name="_1kg">1Kg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_12_04_2024">12/04/2024</string>
    <string name="_12_04_2024_">12/04/2024 |</string>
    <string name="deafult_">Default</string>
    <string name="_11_00_12_00_wib">11.00 - 12.00 WIB</string>
    <string name="order_arrived">Order Arrived</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="another_address">Another Address</string>
    <string name="total_price">Total Price</string>
    <string name="delivery_charge">Delivery charge</string>
    <string name="total">Total</string>
    <string name="payment_method">Payment Method</string>
    <string name="_0000_0000_0000_0000">0000 0000 0000 0000</string>
    <string name="pay_now">Pay Now</string>
    <string name="logout">Logout</string>
    <string name="order_history">Order History</string>
    <string name="home">Home</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="addrs_example">Input Your Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hello_chegue">Hello chegue!</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="search_keywords">Search keywords..</string>
    <string name="make_sure_your_meat_the_highest_quality">Make sure your meat The highest quality</string>
    <string name="scan_now">Scan Now</string>
    <string name="featured_products">Featured products</string>
    <string name="Password_cannot_characters">Password cannot be less than 8 characters</string>
    <string name="input_phone">Input phone</string>
    <string name="input_password">Input password</string>
    <string name="input_email">Input email</string>
    <string name="input_name">Input name</string>
    <string name="_082138238284">082138238284</string>
    <string name="Something_wrong">Something wrong</string>
    <string name="empty_image_warning">Meat image is empty</string>

    <string name="Loading">Loading</string>
    <string name="fill_all_fields">Please fill all the fields</string>
    <string name="success">Success</string>


</resources>