<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/action_settings">
            <menu>
                <item
                    android:id="@+id/nav_user"
                    android:icon="@drawable/ic_user"
                    android:title="@string/menu_user" />
                <item
                    android:id="@+id/nav_my_cart"
                    android:icon="@drawable/ic_cart"
                    android:title="@string/menu_cart" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
                />
            </menu>
        </item>
    </group>

</menu>