<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.mygrocerystore.ui.itemUi.ButtonBack
            android:id="@+id/button_back_inSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewLogoInlogin"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25.18dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/sign_up"
            android:textColor="@color/purple_50"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogoInlogin" />

        <TextView
            android:id="@+id/name"
            style="@style/title_input"
            android:layout_marginTop="31dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="38dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name">

            <com.example.mygrocerystore.ui.itemUi.InputData
                android:id="@+id/ed_login_name"
                style="@style/CustomInputStyle"
                android:hint="@string/input_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/email"
            style="@style/title_input"
            android:layout_marginTop="13dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="38dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <com.example.mygrocerystore.ui.itemUi.InputEmail
                android:id="@+id/ed_login_email"
                style="@style/CustomInputStyle"
                android:hint="@string/input_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone Number -->
        <TextView
            android:id="@+id/phone_number"
            style="@style/title_input"
            android:layout_marginTop="13dp"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="38dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number">

            <com.example.mygrocerystore.ui.itemUi.InputPhone
                android:id="@+id/ed_login_phone_number"
                style="@style/CustomInputStyle"
                android:hint="@string/input_phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Address -->
        <TextView
            android:id="@+id/address"
            style="@style/title_input"
            android:layout_marginTop="13dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_phone_number" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="38dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address">

            <com.example.mygrocerystore.ui.itemUi.InputAddress
                android:id="@+id/ed_login_address"
                style="@style/CustomInputStyle"
                android:hint="@string/addrs_example" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <TextView
            android:id="@+id/password"
            style="@style/title_input"
            android:layout_marginTop="13dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_address" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="38dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password">

            <com.example.mygrocerystore.ui.itemUi.InputPassword
                android:id="@+id/ed_login_password"
                style="@style/CustomInputStyle"
                android:hint="@string/input_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password -->
        <TextView
            android:id="@+id/confirm_password"
            style="@style/title_input"
            android:layout_marginTop="13dp"
            android:text="@string/confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="38dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password">

            <com.example.mygrocerystore.ui.itemUi.InputPassword
                android:id="@+id/ed_login_confirm_password"
                style="@style/CustomInputStyle"
                android:hint="@string/confirm_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.example.mygrocerystore.ui.itemUi.ButtonCustom
            android:id="@+id/button_sign_up_inRegister"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="38dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/layout_confirm_password"
            tools:layout_editor_absoluteX="40dp" />

        <TextView
            android:id="@+id/dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="87dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/mulish"
            android:gravity="start"
            android:text="@string/already_have_an_account"
            android:textColor="@color/grey200"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up_inRegister" />


        <TextView
            android:id="@+id/button_sign_up_inLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/mulish_medium"
            android:text="@string/sign_in"
            android:textColor="@color/purple_100"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dont_have_account"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up_inRegister" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
