<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/white"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_in_nav_header"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile_image"
        app:civ_border_color="@color/white"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        app:civ_circle_background_color="@color/white"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/profile_image" />

    <TextView
        android:id="@+id/name_in_nav_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/mulish_bold"
        android:textSize="18sp"
        android:text="@string/nav_header_title"
        android:textColor="@color/grey_100"
        />

    <TextView
        android:id="@+id/email_in_nav_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulish_medium"
        android:textSize="12sp"
        android:textColor="@color/grey_100"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>