<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_meat_cart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/oh_photo_meat"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="9dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/meatitsrawstate" />

        <TextView
            android:id="@+id/oh_name_meat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/meat"
            android:textColor="@color/grey_100"
            android:textSize="20sp"
            android:layout_marginStart="21.5dp"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/mulish_bold"
            app:layout_constraintStart_toEndOf="@+id/oh_photo_meat"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/oh_price_kg"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginTop="6dp"
            android:text="@string/_1kg"
            android:textColor="@color/grey_200"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/oh_photo_meat"
            app:layout_constraintTop_toBottomOf="@+id/oh_name_meat" />

        <TextView
            android:id="@+id/oh_price"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/rp180_000"
            android:fontFamily="@font/mulish_bold"
            android:textSize="17.19sp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="21.5dp"
            android:textColor="@color/purple_300"
            app:layout_constraintStart_toEndOf="@+id/oh_photo_meat"
            app:layout_constraintTop_toBottomOf="@+id/oh_price_kg" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/carbon_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oh_photo_meat" />

        <TextView
            android:id="@+id/oh_address"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/jl_simajuntak_raja_3_no_43_pajagalan"
            android:textColor="@color/black_50"
            android:textSize="15sp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/oh_price" />

        <ImageView
            android:id="@+id/image_time"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="33dp"
            android:src="@drawable/carbon_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/oh_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:textColor="@color/black_50"
            android:fontFamily="@font/inter"
            android:text="@string/_12_04_2024"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_time" />

        <TextView
            android:id="@+id/oh_time"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/_11_00_12_00_wib"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oh_date" />

        <com.example.mygrocerystore.ui.itemUi.ButtonCustom
            android:id="@+id/oh_button_order"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/order_arrived"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>