<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_meat_cart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/ohf_photo_meat"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="9dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/meatitsrawstate" />

        <TextView
            android:id="@+id/ohf_name_meat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/meat"
            android:textColor="@color/grey_100"
            android:textSize="20sp"
            android:layout_marginStart="21.5dp"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/mulish_bold"
            app:layout_constraintStart_toEndOf="@+id/ohf_photo_meat"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ohf_price_kg"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="6dp"
            android:text="@string/_1kg"
            android:textColor="@color/grey_200"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/ohf_photo_meat"
            app:layout_constraintTop_toBottomOf="@+id/ohf_name_meat" />

        <TextView
            android:id="@+id/ohf_price"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/rp180_000"
            android:fontFamily="@font/mulish_bold"
            android:textSize="17.19sp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="23dp"
            android:textColor="@color/purple_300"
            app:layout_constraintStart_toEndOf="@+id/ohf_photo_meat"
            app:layout_constraintTop_toBottomOf="@+id/ohf_price_kg" />

        <TextView
            android:id="@+id/ohf_address"
            android:layout_width="278dp"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/jl_simajuntak_raja_3_no_43_pajagalan"
            android:textColor="@color/black_50"
            android:textSize="13sp"
            android:layout_marginStart="23dp"
            app:layout_constraintStart_toEndOf="@+id/ohf_photo_meat"
            app:layout_constraintTop_toBottomOf="@+id/ohf_price" />

        <ImageView
            android:id="@+id/image_time"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="33dp"
            android:src="@drawable/ic_baseline_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ohf_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:textSize="13sp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="23dp"
            android:text="@string/_12_04_2024_"
            android:textColor="@color/black_50"
            app:layout_constraintStart_toEndOf="@+id/ohf_photo_meat"
            app:layout_constraintTop_toBottomOf="@+id/ohf_price" />

        <TextView
            android:id="@+id/ohf_time"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/inter"
            android:text="@string/_11_00_12_00_wib"
            android:textColor="@color/black_50"
            app:layout_constraintStart_toEndOf="@+id/ohf_date"
            app:layout_constraintTop_toBottomOf="@+id/ohf_price" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>