<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splashScreen.SplashScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/splash_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/meatitsrawstate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/splash_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/meatopia_shop"
            android:textColor="@color/grey_50"
            android:textSize="33sp"
            app:layout_constraintTop_toBottomOf="@+id/splash_image" />

        <TextView
            android:id="@+id/at_your_door_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/at_your_door"
            android:textColor="@color/grey_50"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/splash_text" />

        <TextView
            android:id="@+id/splash_text_2"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:text="@string/the_easiest_way_to_buy_your_meat_shopping"
            android:textColor="@color/grey_100"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/at_your_door_text" />

        <com.example.mygrocerystore.ui.itemUi.ButtonCustom
            android:id="@+id/button_get_started"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="30dp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splash_text_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
